<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <parent>
    <groupId>gov.dot.its.jpo.sdcsdw</groupId>
    <artifactId>per-xer-codec</artifactId>
    <version>1.0.0-SNAPSHOT</version>
  </parent>
  
  <artifactId>per-xer-codec-java</artifactId>
  <packaging>jar</packaging>
  
  <profiles>
      <profile>
        <id>osx</id>
        <activation>
          <os>
            <family>mac</family>
          </os>
        </activation>
        <properties>
          <per-xer-codec-native-artifactId>per-xer-codec-native-osx</per-xer-codec-native-artifactId>
          <per-xer-codec-native-type>dylib</per-xer-codec-native-type>
        </properties>
      </profile>
      <profile>
        <id>linux</id>
        <activation>
          <os>
            <family>unix</family>
            <name>Linux</name>
          </os>
        </activation>
        <properties>
          <per-xer-codec-native-artifactId>per-xer-codec-native-linux</per-xer-codec-native-artifactId>
          <per-xer-codec-native-type>so</per-xer-codec-native-type>
        </properties>
      </profile>
    </profiles>
  
  <properties>
    <jacoco.agent.argLine></jacoco.agent.argLine>
  </properties>
  
  <build>
    <plugins>
      <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-compiler-plugin</artifactId>
	    <version>3.7.0</version>
	    <configuration>
	      <source>1.8</source>
	      <target>1.8</target>
	    </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.0.2</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>test-compile</phase>
            <goals>
              <goal>copy</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <artifactItems>
            <artifactItem>
              <groupId>gov.dot.its.jpo.sdcsdw</groupId>
              <artifactId>${per-xer-codec-native-artifactId}</artifactId>
              <version>1.0.0-SNAPSHOT</version>
              <type>${per-xer-codec-native-type}</type>
              <overWrite>false</overWrite>
              <outputDirectory>${project.build.directory}</outputDirectory>
              <destFileName>libper-xer-codec.${per-xer-codec-native-type}</destFileName>
            </artifactItem>
          </artifactItems>
        </configuration>
      </plugin>
      
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <dependencies>
          <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-surefire-provider</artifactId>
            <version>1.1.0-M1</version>
          </dependency>
          <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.1.0-M1</version>
          </dependency>
        </dependencies>
        <configuration>
	      <argLine>-Djava.library.path=${project.build.directory} @{jacoco.agent.argLine}</argLine>
	    </configuration>
      </plugin>
      
      <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>0.8.0</version>
          <configuration>
            <propertyName>jacoco.agent.argLine</propertyName>
            <excludes>
                <exclude>**/ExampleApplication.*</exclude>
            </excludes>
          </configuration>
        </plugin>
    </plugins>
  </build>
  
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.1.0-M1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
